--- a/src/styles/icons.css
+++ b/src/styles/icons.css
@@ -1,7 +1,7 @@
 @import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css');
 
 .icon {
-  margin-right: 8px;
+  /* margin-right: 8px; */
   color: #1976d2;
   min-width: 1.2em;
   text-align: center;
